git alignment fix

--- a/my-app/src/components/FooterMenu.css
+++ b/my-app/src/components/FooterMenu.css
@@ -40,6 +40,7 @@
 .nav-link{
     color:#736c68!important;
     font-family: 'Josefin Sans',sans-serif;
+    text-align: center;
 }
 
 .footer-padding{
